[gd_scene load_steps=3 format=3 uid="uid://kksuissonhgt"]

[ext_resource type="Script" path="res://UserInterface/Menus/Pause/PauseOverlay.gd" id="1_6adhs"]
[ext_resource type="Theme" uid="uid://dv4jilwxn458m" path="res://UserInterface/Themes/MenuTheme.tres" id="2_vfthb"]

[node name="PauseOverlay" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_6adhs")

[node name="PauseMenu" type="Control" parent="."]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_vfthb")

[node name="Panel" type="Panel" parent="PauseMenu"]
layout_mode = 2
offset_left = 208.0
offset_top = 64.0
offset_right = 432.0
offset_bottom = 296.0

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_vfthb")
theme_override_constants/margin_left = 224
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 224
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_vfthb")
theme_override_constants/separation = 12

[node name="PauseLabel" type="Label" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_vfthb")
theme_override_font_sizes/font_size = 24
text = "Game Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_vfthb")
theme_override_font_sizes/font_size = 16
text = "Continue
"

[node name="SettingsButton" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_vfthb")
theme_override_font_sizes/font_size = 16
text = "Settings"

[node name="ExitButton" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_vfthb")
theme_override_font_sizes/font_size = 16
text = "Exit"

[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
